--- a/scripts/libzmq/4.2.2/.travis.yml
+++ b/scripts/libzmq/4.2.2/.travis.yml
@@ -2,6 +2,9 @@ language: generic
 
 matrix:
   include:
+    - os: osx
+      osx_image: xcode8
+      compiler: clang
     - os: linux
       sudo: false
 
